--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "engines": {
-    "node": "18.x"
+    "node": ">=18"
   },
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
@@ -16,6 +16,7 @@
     "react-router-dom": "^7.1.1",
     "react-scripts": "5.0.1",
     "react-virtualized": "^9.22.5",
+    "recharts": "^2.15.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
