--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "node": ">=18"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^6.3.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -17,6 +20,7 @@
     "react-router-dom": "^7.1.1",
     "react-scripts": "5.0.1",
     "react-virtualized": "^9.22.5",
+    "react-window": "^1.8.11",
     "recharts": "^2.15.0",
     "web-vitals": "^2.1.4"
   },
